Fixed invisible header parts blocking content.

--- a/component/games/games.village.module.css
+++ b/component/games/games.village.module.css
@@ -22,6 +22,8 @@
 .gameNav
 {
 	display: flex;
+	white-space: nowrap;
+	overflow-x: auto;
 	position: sticky;
 	top: 5rem;
 	background-color: blue;
