--- a/component/header/header.main.module.css
+++ b/component/header/header.main.module.css
@@ -5,9 +5,11 @@
   left: 0;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   width: 100%;
   z-index: 100;
   background-color: black;
+  pointer-events: none;;
 }
 
 .nav
@@ -23,21 +25,14 @@
   justify-content: center;
   align-items: center;
 }
-
-.spacer
-{
-  display: none;
-}
-  
+ 
 .logo
 {
-  align-self: flex-start;
   border-radius: 0 0 30px 0;
 }
 
 .menu
 {
-  align-self: flex-end;
   right: 0;
   border-radius: 0 0 0 30px;
 }
@@ -53,12 +48,5 @@
   {
     width: 5rem;
     box-shadow: 1px 7px 18px -5px black;
-  }
-  
-  .spacer
-  {
-    display: inherit;
-    width: 100%;
-    align-self: stretch;
   }
 }
